modifiche sezione Progetto e bibliografia

--- a/figures/gan.tex
+++ b/figures/gan.tex
@@ -1,7 +1,7 @@
 %\documentclass{standalone}
 %\usepackage{tikz}
-
-\usetikzlibrary{shapes,arrows,fit,calc,positioning,snakes}
+%
+%\usetikzlibrary{shapes,arrows,fit,calc,positioning,snakes}
 \tikzstyle{input} = [coordinate]
 \tikzstyle{output} = [coordinate]
 \tikzstyle{box} = [draw, rectangle, fill=white, rounded corners, thick, text width=7em, text centered, minimum height=5em, node distance=3cm]
