--- a/sections/references.bib
+++ b/sections/references.bib
@@ -251,3 +251,50 @@ Title = {Improved Techniques for Training GANs},
 Year = {2016},
 Eprint = {arXiv:1606.03498},
 }
+
+@misc{fig:cnnfonte,
+Title = {Understanding Convolutional Neural Networks for NLP},
+Author = {Denny Britz},
+Year = {2015},
+howpublished = {\url{http://www.wildml.com/2015/11/understanding-convolutional-neural-networks-for-nlp/}}}
+
+@misc{1502.03167,
+Author = {Sergey Ioffe and Christian Szegedy},
+Title = {Batch Normalization: Accelerating Deep Network Training by Reducing Internal Covariate Shift},
+Year = {2015},
+Eprint = {arXiv:1502.03167},
+}
+
+@misc{GANhacks,
+  author = {Soumith Chintala and Emily Denton and Martin Arjovsky and Michael Mathieu},
+  title = {How to Train a GAN? Tips and tricks to make GANs work},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/soumith/ganhacks}},
+  commit = {d09bbf3983c8b6ab1709f87379c8f969c8a81f93}
+}
+
+@article{dropout,
+ author = {Srivastava, Nitish and Hinton, Geoffrey and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
+ title = {Dropout: A Simple Way to Prevent Neural Networks from Overfitting},
+ journal = {J. Mach. Learn. Res.},
+ issue_date = {January 2014},
+ volume = {15},
+ number = {1},
+ month = jan,
+ year = {2014},
+ issn = {1532-4435},
+ pages = {1929--1958},
+ numpages = {30},
+ url = {http://dl.acm.org/citation.cfm?id=2627435.2670313},
+ acmid = {2670313},
+ publisher = {JMLR.org},
+ keywords = {deep learning, model combination, neural networks, regularization},
+}
+
+@misc{gaussian,
+Author = {Tom White},
+Title = {Sampling Generative Networks},
+Year = {2016},
+Eprint = {arXiv:1609.04468},
+}
