modifiche sezione Progetto e bibliografia

--- a/sections/progetto.tex
+++ b/sections/progetto.tex
@@ -10,7 +10,12 @@ In questo capitolo si propone il progetto realizzato per raggiungere gli obietti
 \caption{Diagramma di progetto}
 \end{figure}
 
-\todo{schema da autoencoder a GAN}
+\begin{figure}[htb]
+    \centering
+	\input{figures/auttogan.tex}
+\label{fig:auttogan}
+\caption{Schema generale della progettazione da Autoencoder a Gan}
+\end{figure}
 
 \section{Classificatore Random Forest}
 \label{randomforest}
