--- a/sections/implementazione.tex
+++ b/sections/implementazione.tex
@@ -2,4 +2,16 @@
 \label{implementazione}
 
 
+\section{Classificatore Random Forest}
+\label{imp:randomforest}
+
+\section{Classificatore Neurale}
+\label{imp:classneurale}
+
+\section{Autoencoder}
+\label{imp:autoencoder}
+
+\section{Generative Adversarial Network}
+\label{imp:gan}
+
 \todo{parlare del pretraining}
