--- a/sections/references.bib
+++ b/sections/references.bib
@@ -298,3 +298,16 @@ Title = {Sampling Generative Networks},
 Year = {2016},
 Eprint = {arXiv:1609.04468},
 }
+
+@INPROCEEDINGS{randomforest, 
+author={Tin Kam Ho}, 
+booktitle={Proceedings of 3rd International Conference on Document Analysis and Recognition}, 
+title={Random decision forests}, 
+year={1995}, 
+volume={1}, 
+number={}, 
+pages={278-282 vol.1}, 
+keywords={decision theory;handwriting recognition;optical character recognition;complexity;decision trees;generalization accuracy;handwritten digits;random decision forests;stochastic modeling;suboptimal accuracy;tree-based classifiers;Classification tree analysis;Decision trees;Handwriting recognition;Hidden Markov models;Multilayer perceptrons;Optimization methods;Stochastic processes;Testing;Tin;Training data}, 
+doi={10.1109/ICDAR.1995.598994}, 
+ISSN={}, 
+month={Aug},}
